// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoPopulateInput /> render() should render checked 1`] = `
<div
  class="container"
>
  <div
    class="InputField form-group"
    color=""
  >
    <div
      class=""
    >
      <input
        class="field form-control"
        disabled=""
        id="id-input-1"
        type="text"
        value="I am a title"
      />
    </div>
  </div>
  <div>
    <label
      class="ui-label-label-3864 label"
      for="checkbox-2"
    >
      <input
        checked=""
        class="input"
        id="checkbox-2"
        name="checkbox-2"
        type="checkbox"
      />
      Use the same as Title
    </label>
  </div>
</div>
`;

exports[`<AutoPopulateInput /> render() should render unchecked 1`] = `
<div
  class="container"
>
  <div
    class="InputField form-group"
    color=""
  >
    <div
      class=""
    >
      <input
        class="field form-control"
        id="id-input-3"
        type="text"
        value="Custom title"
      />
    </div>
  </div>
  <div>
    <label
      class="ui-label-label-3864 label"
      for="checkbox-4"
    >
      <input
        class="input"
        id="checkbox-4"
        name="checkbox-4"
        type="checkbox"
      />
      Use the same as Title
    </label>
  </div>
</div>
`;
